refactor: remove username
